Adding Keycloak dependencies and token validation based on roles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-sgo.html
 springdoc.swagger-ui.operationsSorter=method
+
+server.port                         = 8081
+keycloak.realm                      = sgo
+keycloak.auth-server-url            = http://localhost:8080/auth
+keycloak.ssl-required               = external
+keycloak.resource                   = sgo-kotlin
+keycloak.credentials.secret         = 43d18a4c-ae80-420d-8355-2429f1829a23
+keycloak.use-resource-role-mappings = true
+keycloak.bearer-only                = true
